--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-x-hub",
+  "name": "express-x-hub-bigint",
   "version": "1.0.4",
-  "description": "X-Hub-Signature Express Middleware",
+  "description": "X-Hub-Signature Express Middleware using Json-BigInt",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha -r ./test/support/env -R spec ./test",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexcurtis/express-x-hub.git"
+    "url": "https://github.com/hoanghiep/express-x-hub.git"
   },
   "keywords": [
     "express",
@@ -25,13 +25,13 @@
     "webhook"
   ],
   "author": {
-    "name": "Alex Curtis"
+    "name": "Alex Curtis, Hiep Tran"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alexcurtis/express-x-hub/issues"
+    "url": "https://github.com/hoanghiep/express-x-hub/issues"
   },
-  "homepage": "https://github.com/alexcurtis/express-x-hub",
+  "homepage": "https://github.com/hoanghiep/express-x-hub",
   "devDependencies": {
     "chai": "^3.3.0",
     "express": "^4.13.3",
